// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`valid config json/single-symbol/multiple-output/output-descriptor/.schema.autogen.json result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.json",
        "(extensions.compilerOptions) filename": "abc.yaml",
        "(extensions.compilerOptions) format": "YAML",
        "(extensions.compilerOptions) property": "compilerOptions",
      },
      "output": Array [
        "non-descriptor.schema.json",
        Object {
          "filename": "default-descriptor.schema.json",
        },
        Object {
          "filename": "custom-descriptor.schema.json",
          "format": "json",
          "indent": "tab",
        },
      ],
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.json",
        "(extensions.schemaSettings) filename": "abc.yaml",
        "(extensions.schemaSettings) format": "YAML",
        "(extensions.schemaSettings) property": "schemaSettings",
      },
      "symbol": "Foo",
    },
  },
}
`;

exports[`valid config json/single-symbol/multiple-output/output-filename/.schema.autogen.json result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.json",
        "(extensions.compilerOptions) filename": "abc.yaml",
        "(extensions.compilerOptions) format": "YAML",
        "(extensions.compilerOptions) property": "compilerOptions",
      },
      "output": "output.schema.json",
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.json",
        "(extensions.schemaSettings) filename": "abc.yaml",
        "(extensions.schemaSettings) format": "YAML",
        "(extensions.schemaSettings) property": "schemaSettings",
      },
      "symbol": "Foo",
    },
  },
}
`;

exports[`valid config json/single-symbol/single-output/output-descriptor/.schema.autogen.json result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.json",
        "(extensions.compilerOptions) filename": "abc.yaml",
        "(extensions.compilerOptions) format": "YAML",
        "(extensions.compilerOptions) property": "compilerOptions",
      },
      "output": Object {
        "filename": "output.schema.json",
        "format": "json",
        "indent": "tab",
      },
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.json",
        "(extensions.schemaSettings) filename": "abc.yaml",
        "(extensions.schemaSettings) format": "YAML",
        "(extensions.schemaSettings) property": "schemaSettings",
      },
      "symbol": "Foo",
    },
  },
}
`;

exports[`valid config json/single-symbol/single-output/output-filename/.schema.autogen.json result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.json",
        "(extensions.compilerOptions) filename": "abc.yaml",
        "(extensions.compilerOptions) format": "YAML",
        "(extensions.compilerOptions) property": "compilerOptions",
      },
      "output": "output.schema.json",
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.json",
        "(extensions.schemaSettings) filename": "abc.yaml",
        "(extensions.schemaSettings) format": "YAML",
        "(extensions.schemaSettings) property": "schemaSettings",
      },
      "symbol": "Foo",
    },
  },
}
`;

exports[`valid config yaml/single-symbol/multiple-output/output-descriptor/.schema.autogen.yaml result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.yaml",
        "(extensions.compilerOptions) filename": "abc.yaml",
        "(extensions.compilerOptions) format": "YAML",
        "(extensions.compilerOptions) property": "compilerOptions",
      },
      "output": Array [
        "non-descriptor.schema.json",
        Object {
          "filename": "default-descriptor.schema.json",
        },
        Object {
          "filename": "custom-descriptor.schema.json",
          "format": "json",
          "indent": "tab",
        },
      ],
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.yaml",
        "(extensions.schemaSettings) filename": "abc.yaml",
        "(extensions.schemaSettings) format": "YAML",
        "(extensions.schemaSettings) property": "schemaSettings",
      },
      "symbol": "Foo",
    },
  },
}
`;

exports[`valid config yaml/single-symbol/multiple-output/output-filename/.schema.autogen.yaml result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.yaml",
        "(extensions.compilerOptions) filename": "abc.yaml",
        "(extensions.compilerOptions) format": "YAML",
        "(extensions.compilerOptions) property": "compilerOptions",
      },
      "output": "output.schema.json",
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.yaml",
        "(extensions.schemaSettings) filename": "abc.yaml",
        "(extensions.schemaSettings) format": "YAML",
        "(extensions.schemaSettings) property": "schemaSettings",
      },
      "symbol": "Foo",
    },
  },
}
`;

exports[`valid config yaml/single-symbol/single-output/output-descriptor/.schema.autogen.yaml result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.yaml",
        "(extensions.compilerOptions) filename": "abc.yaml",
        "(extensions.compilerOptions) format": "YAML",
        "(extensions.compilerOptions) property": "compilerOptions",
      },
      "output": Object {
        "filename": "output.schema.json",
        "format": "json",
        "indent": "tab",
      },
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.yaml",
        "(extensions.schemaSettings) filename": "abc.yaml",
        "(extensions.schemaSettings) format": "YAML",
        "(extensions.schemaSettings) property": "schemaSettings",
      },
      "symbol": "Foo",
    },
  },
}
`;

exports[`valid config yaml/single-symbol/single-output/output-filename/.schema.autogen.yaml result matches snapshot 1`] = `
Success {
  "code": 0,
  "error": undefined,
  "value": Object {
    "instruction": Object {
      "compilerOptions": Object {
        "(base.compilerOptions) filename": ".schema.autogen.yaml",
        "(extensions.compilerOptions) filename": "abc.yaml",
        "(extensions.compilerOptions) format": "YAML",
        "(extensions.compilerOptions) property": "compilerOptions",
      },
      "output": "output.schema.json",
      "schemaSettings": Object {
        "(base.schemaSettings) filename": ".schema.autogen.yaml",
        "(extensions.schemaSettings) filename": "abc.yaml",
        "(extensions.schemaSettings) format": "YAML",
        "(extensions.schemaSettings) property": "schemaSettings",
      },
      "symbol": "Foo",
    },
  },
}
`;
